--- a/b.html
+++ b/b.html
@@ -7,26 +7,14 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-    <h1>Open Link in Default Browser</h1>
-    <button id="openLinkButton">Open Google</button>
+<script>
+function openExternalLink(url) {
+  // Attempt to open the link directly
+  window.open(url, '_blank');
+}
+</script>
 
-    <script>
-        // Ensure Telegram WebApp API is loaded
-        if (typeof Telegram !== "undefined" && Telegram.WebApp) {
-            const button = document.getElementById('openLinkButton');
-            
-            // Set up the button to use Telegram's openLink method
-            button.addEventListener('click', () => {
-                Telegram.WebApp.openLink('https://www.google.com/');
-            });
-        } else {
-            // Fallback for environments without Telegram WebApp API
-            console.warn("Telegram WebApp API not detected. Opening link normally.");
-            const button = document.getElementById('openLinkButton');
-            button.addEventListener('click', () => {
-                window.open('https://www.google.com/', '_blank');
-            });
-        }
-    </script>
+<button onclick="openExternalLink('https://www.google.com/')">Click Me</button>
+
 </body>
 </html>
