--- a/itsanna/chat/index.html
+++ b/itsanna/chat/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <!-- Meta and Title -->
+    <meta name="robots" content="noindex, nofollow">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anna Reed - Chat</title>
